--- a/template/hello.html
+++ b/template/hello.html
@@ -17,7 +17,7 @@
             <hr>
         </h2>
         <button class="delete">delete</button>
-
+git push -u origin main
     {% endfor %}
 {% endblock %}
 
